--- a/index.html
+++ b/index.html
@@ -6,12 +6,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Component Library</title>
+    <!-- <style>
+        body {
+            color: red;
+        }
+    </style> -->
+    <link href="styles.css" rel="stylesheet" />
 </head>
 
 <body>
-    <h1>Varaprasad's component library</h1>
+    <h1 id="lib-header">Varaprasad's component library</h1>
 
-    <p>I am attending neog.camp and I want to make a library which would make all my projects look good consistent.</p>
+    <p class="para">I am attending neog.camp and I want to make a library which would make all my projects look good consistent.</p>
     <hr>
 
     <h2>@typography</h2>
@@ -26,7 +32,7 @@
     <h2>@container</h2>
 
     <h3>fluid container</h3>
-    <div>This is a fluid container and it will go till the end of the page.</div>
+    <div class="para">This is a fluid container and it will go till the end of the page.</div>
 
     <h3>fluid container</h3>
     <div>This is a centered container and it will go till the specified width.</div>
