--- a/index.html
+++ b/index.html
@@ -6,18 +6,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Component Library</title>
-    <!-- <style>
-        body {
-            color: red;
-        }
-    </style> -->
     <link href="styles.css" rel="stylesheet" />
 </head>
 
 <body>
-    <h1 id="lib-header">Varaprasad's component library</h1>
+    <h1>Varaprasad's component library</h1>
 
-    <p class="para">I am attending neog.camp and I want to make a library which would make all my projects look good consistent.</p>
+    <p>I am attending neog.camp and I want to make a library which would make all my projects look good consistent.</p>
     <hr>
 
     <h2>@typography</h2>
@@ -32,23 +27,23 @@
     <h2>@container</h2>
 
     <h3>fluid container</h3>
-    <div class="para">This is a fluid container and it will go till the end of the page.</div>
+    <div class="container">This is a fluid container and it will go till the end of the page.</div>
 
     <h3>fluid container</h3>
-    <div>This is a centered container and it will go till the specified width.</div>
+    <div class="container container-centre">This is a centered container and it will go till the specified width.</div>
     <hr>
 
     <h2>@links</h2>
 
-    <a href="/">Primary Link</a>
-    <a href="/">Secondary Link</a>
+    <a class="link link-primary" href="/">Primary Link</a>
+    <a class="link link-secondary" href="/">Secondary Link</a>
 
     <hr>
     <h2>@lists</h2>
 
     <h3>unordered list</h3>
 
-    <ul>
+    <ul class="list-non-bullet">
         <li>Item One</li>
         <li>Item Two</li>
         <li>Item Three</li>
@@ -56,15 +51,15 @@
 
     <h3>Unordered Inline list</h3>
 
-    <ul>
-        <li>Inline Item One</li>
-        <li>Inline Item Two</li>
-        <li>Inline Item Three</li>
+    <ul class="list-non-bullet">
+        <li class="list-item-inline">Inline Item One</li>
+        <li class="list-item-inline">Inline Item Two</li>
+        <li class="list-item-inline">Inline Item Three</li>
     </ul>
 
     <h3>Reverse Ordered list</h3>
 
-    <ol>
+    <ol reversed>
         <li>milk</li>
         <li>egg</li>
         <li>bread</li>
@@ -74,12 +69,12 @@
 
     <h2>@nav</h2>
 
-    <nav>
-        <div>iAmBrand</div>
-        <ul>
-            <li><a href="/">home</a></li>
-            <li><a href="/">products</a></li>
-            <li><a href="/">about</a></li>
+    <nav class="navigation container">
+        <div class="nav-brand">iAmBrand</div>
+        <ul class="list-non-bullet nav-pills">
+            <li class="list-item-inline"><a class="link link-active" href="/">home</a></li>
+            <li class="list-item-inline"><a class="link" href="/">products</a></li>
+            <li class="list-item-inline"><a class="link" href="/">about</a></li>
         </ul>
     </nav>
 
@@ -87,34 +82,38 @@
 
     <h2>@header</h2>
 
-    <header>
-        <img src="images/hero.png" />
-        <h1>Heading inside hero</h1>
+    <header class="hero">
+        <img class="hero-img" src="images/hero.png" />
+        <h1 class="hero-heading">Heading inside <span class="heading-inverted">hero</span></h1>
     </header>
 
     <hr>
 
     <h2>@section</h2>
-    <section>
-        <h3>white section</h3>
-        <p>This will have white background</p>
+    <section class="section">
+        <div class="container container-centre">
+        <h1>white section</h1>
+        <p>Wikipedia is a compendium of the world's knowledge. If you know what you are looking for, type it into Wikipedia's search box. If, however, you need a bird's eye view of what Wikipedia has to offer, see its main contents pages below, which in turn list more specific pages.</p>
+        </div>
     </section>
 
-    <section>
-        <h3>off white section</h3>
-        <p>This will have gray background</p>
+    <section class="section off-white">
+        <div class="container container-centre">
+        <h1>off white section</h1>
+        <p>Wikipedia is a compendium of the world's knowledge. If you know what you are looking for, type it into Wikipedia's search box. If, however, you need a bird's eye view of what Wikipedia has to offer, see its main contents pages below, which in turn list more specific pages.</p>
+        </div>
     </section>
 
     <hr>
 
     <h2>@footer</h2>
 
-    <footer>
-        <div>Some small heading inside footer</div>
-        <ul>
-            <li>socialone</li>
-            <li>socialtwo</li>
-            <li>socialthree</li>
+    <footer class="footer">
+        <div class="footer-header">Some small heading inside footer</div>
+        <ul class="list-non-bullet">
+            <li class="list-item-inline"><a class="link" href="/">socialone</a></li>
+            <li class="list-item-inline"><a class="link" href="/">socialtwo</a></li>
+            <li class="list-item-inline"><a class="link" href="/">socialthree</a></li>
         </ul>
     </footer>
 
